cmake_minimum_required(VERSION 2.8)
project( EncryptImage )
set(OpenCV_DIR ${OpenCV_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( EncryptImage EncryptImage.cpp )
target_link_libraries( EncryptImage ${OpenCV_LIBS} )
add_executable( DecryptImage DecryptImage.cpp )
target_link_libraries( DecryptImage ${OpenCV_LIBS} )