cmake_minimum_required(VERSION 2.8)
project( EncryptImage )
set(OpenCV_DIR ${OpenCV_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( EncryptImageLSB EncryptImageLSB.cpp )
target_link_libraries( EncryptImageLSB ${OpenCV_LIBS} )
add_executable( DecryptImageLSB DecryptImageLSB.cpp )
target_link_libraries( DecryptImageLSB ${OpenCV_LIBS} )
add_executable( EncryptImageDCT EncryptImageDCT.cpp )
target_link_libraries( EncryptImageDCT ${OpenCV_LIBS} )
add_executable( DecryptImageDCT DecryptImageDCT.cpp )
target_link_libraries( DecryptImageDCT ${OpenCV_LIBS} )
add_executable( sample sample.cpp )
target_link_libraries( sample ${OpenCV_LIBS} )
